--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -77,7 +77,7 @@
 
         </div>
 
-        <div class="col-md-4" id="sidebar_design">
+        <div class="col-md-4" id="sidebar_design" style="overflow: auto">
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <h3>Base house cost + Customizations</h3>
