--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -82,7 +82,7 @@ else
                                 <a class="" data-toggle="tab" href="#tab4" role="tab"><i class="fa fa-user tab-icon"></i> <span>Identification</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="" data-toggle="tab" href="#tab5" role="tab"><i class="fa fa-check tab-icon"></i> <span>Employment</span></a>
+                                <a class="" data-toggle="tab" href="#tab5" role="tab"><i class="fa fa-gear tab-icon"></i> <span>Employment</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="" data-toggle="tab" href="#tab6" role="tab"><i class="fa fa-file tab-icon"></i> <span>Emergency Contact</span></a>
