--- a/ProjectUbuild/Views/Loan/Eligibility.cshtml
+++ b/ProjectUbuild/Views/Loan/Eligibility.cshtml
@@ -37,12 +37,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8  col-sm-12 ">
-                <form novalidate="">
+                <form novalidate="" name="eligibilityForm">
                     <div class="row">
                         <div class="col-md-10">
                             <h2 class="fs-title" title="Choose Fullhouse or Phase to proceed to loan applications" style="margin-bottom: 0">Choose Loan Type</h2>
                             <div>
-                                <select class="" data-ng-model="builder.loanType">
+                                <select required="" class="" data-ng-model="builder.loanType">
                                     <option value="">-Select Loan Type-</option>
                                     <option value="Fullhouse">Full house</option>
                                     <option value="Phase">Phase</option>
@@ -50,11 +50,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row" ng-show="builder.loanType=='Phase'">
+                    <div class="row" ng-if="builder.loanType=='Phase'">
                         <div class="col-md-10">
                             <h2 class="fs-title" style="margin-bottom: 0">Choose Phase</h2>
                             <div>
-                                <select class="" data-ng-model="builder.phase" data-ng-options="item.RecordId as item.PhaseName for item in buildingPhases">
+                                <select class=""  required data-ng-model="builder.phase" data-ng-options="item.RecordId as item.PhaseName for item in buildingPhases">
                                     <option value="">-Select Phase-</option>
                                 </select>
                             </div>
@@ -67,7 +67,7 @@
                                     <div class="col-md-6">
                                         <div class="form-group form-group-default input-group">
                                             <label for="houseEligibility" class="ng-binding">Please enter Loan Tenure.</label>
-                                            <select data-ng-model="builder.loanTenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                            <select required="" data-ng-model="builder.loanTenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
                                                 <option value="">Select Loan Tenure</option>
                                                 <option data-ng-repeat="t in getTenureRange()" value="{{t}}">{{t}}</option>
                                             </select>
@@ -76,7 +76,7 @@
                                     <div class="col-md-6">
                                         <div class="form-group form-group-default input-group">
                                             <label for="houseEligibility" class="ng-binding">Tenure Unit.</label>
-                                            <select data-ng-model="builder.loanTenureUnit" id="loanTenureUnit" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                            <select required="" data-ng-model="builder.loanTenureUnit" id="loanTenureUnit" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
                                                 <option selected="selected" value="Years">Year(s)</option>
                                                 <option value="Months">Months</option>
                                             </select>
@@ -103,7 +103,7 @@
                         <div class="col-md-10">
                             <div class="form-group form-group-default input-group">
                                 <label for="houseEligibility_loanAmount" class="ng-binding">Please enter Loan Amount.</label>
-                                <input autocomplete="off" data-ng-model="builder.loanAmount" id="houseEligibility_loanAmount" placeholder="Loan Amount here" type="number" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                <input autocomplete="off" required="" data-ng-model="builder.loanAmount" id="houseEligibility_loanAmount" placeholder="Loan Amount here" type="number" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
 
                             </div>
                         </div>
@@ -112,14 +112,16 @@
                         <div class="col-md-10">
                             <div class="form-group form-group-default input-group">
                                 <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
-                                <input autocomplete="off" data-ng-model="builder.monthlyIncome" id="houseEligibility" placeholder="Monthly Income here" type="number" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                                <span data-ng-show="builder.loanTenure && builder.monthlyIncome && builder.loanType" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="checkEligibility()">
-                                    Submit
-                                </span>
+                                <input required="" autocomplete="off" data-ng-model="builder.monthlyIncome" id="houseEligibility" placeholder="Monthly Income here" type="number" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                               
                             </div>
                         </div>
                     </div>
-
+                    <div class="row">
+                        <button title="Complete the form to enable the button for submission"  ng-disabled="!eligibilityForm.$valid" class="btn btn-danger" style="cursor: pointer; background: #ac5e81" data-ng-click="checkEligibility()">
+                            Submit
+                        </button>
+                    </div>
                 </form>
             </div>
         </div>
