--- a/ProjectUbuild/Views/Home/Index.cshtml
+++ b/ProjectUbuild/Views/Home/Index.cshtml
@@ -10,18 +10,21 @@
             </div>
             <div class="fs-vid-background">
                 <video muted loop>
-                    <source src="~/assets/foundry/video/video2.webm" type="video/webm">
-                    <source src="~/assets/foundry/video/video2.mp4" type="video/mp4">
-                    <source src="~/assets/foundry/video/video2.ogv" type="video/ogg">
+@*                    <source src="~/assets/foundry/video/video2.webm" type="video/webm">*@
+@*                    <source src="~/assets/foundry/video/video2.mp4" type="video/mp4">*@
+@*                    <source src="~/assets/foundry/video/video2.ogv" type="video/ogg">*@
+
+                    <source src="~/assets/foundry/video/videoUBuild.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="container">
-                <div class="row">
+                <div class="row" style="margin-top:400px">
                     <div class="col-sm-12 text-center">
-                        <h1 class="large">Video in slider</h1>
-                        <p class="lead">
-                            We can have a short video clip playing here
-                        </p>
+@*                        <h1 class="large">Video in slider</h1>*@
+@*                        <p class="lead">*@
+@*                            We can have a short video clip playing here*@
+@*                        </p>*@
+                        
                         <a class="btn btn-lg btn-filled" href="/fullhouse/index">Apply now</a>
                     </div>
                 </div>
@@ -133,7 +136,7 @@
             <div class="container v-align-transform">
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
-                        <h1 class="mb40 mb-xs-16 large">Fixtures and Fittings</h1>
+                        <h1 class="mb40 mb-xs-16 large">Your Fixtures and Fittings</h1>
                         <h6 class="uppercase mb16">Get a loan to finance your home Fixtures and Fittings</h6>
                         @*<p class="lead mb40">
                             Slider 3
@@ -171,7 +174,7 @@
             <div class="container v-align-transform">
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
-                        <h1 class="mb40 mb-xs-16 large">Juuust Chill</h1>
+                       @* <h1 class="mb40 mb-xs-16 large">Juuust Chill</h1>*@
                         <h6 class="uppercase mb16"></h6>
                         @*<p class="lead mb40">
                             Slider 3
