--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -129,14 +129,13 @@
                             <td>
                                 <span data-ng-bind="vm.model.houseCostCurrency"></span><span data-ng-bind="value.UnitCost | currency:''"></span>
                             </td>
-                        </tr>
-
-                        </tbody>
+                        </tr> 
+                       </tbody>
                     </table>
                     <form>
                         <h4>You may be elligible for a loan to own this house. </h4>
                         <div class="form-group form-group-default input-group">
-                            <label for="houseEligibility" class="ng-binding">Please enter Loan Tenure.</label>
+                            <label for="houseEligibility" class="ng-binding">Please Select Loan Tenure in Years.</label>
                             <select data-ng-model="vm.model.tenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
                                 <option value="">Select Loan Tenure</option>
                                 <option data-ng-repeat="t in vm.getTenureRange()" value="{{t}}">{{t}}</option>
